--- a/public/css/app.css
+++ b/public/css/app.css
@@ -5,6 +5,8 @@ body {
 }
 
 #vis {
-  height: 100vh;
-  width: 100vw;
+  height: 90vh;
+  width: 90vw;
+  background-image: url(/oregon-fs8.png);
+  background-size: contain;
 }
